--- a/www.hackercamp.cz/src/stylesheets/main.scss
+++ b/www.hackercamp.cz/src/stylesheets/main.scss
@@ -50,7 +50,8 @@ img.responsive {
     background-position: right;
   }
 
-  .hc-camp-detail img {
+  .hc-camp-detail img,
+  .hc-camp-detail video {
     width: 80%;
     max-width: 622px;
   }
