[www.hackercamp.cz] Mute video to autoplay

--- a/www.hackercamp.cz/src/html/index.njk
+++ b/www.hackercamp.cz/src/html/index.njk
@@ -344,7 +344,7 @@
           <div
             class="hc-camp-detail mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop"
           >
-            <video class="responsive" autoplay loop>
+            <video class="responsive" muted autoplay loop>
               <source src="https://res.cloudinary.com/topmonks/video/upload/c_crop,f_auto,g_center,h_622,q_auto,w_622/v1619106183/www.hackercamp.cz/Pohled_na_Soben%CC%8Ca%CC%81k_z_dronu.mp4">
               {% set publicId = images["header-camp.png"]["public_id"] %}
               <picture>
