[www.hackercamp.cz] What to expect section WIP

--- a/www.hackercamp.cz/src/html/index.njk
+++ b/www.hackercamp.cz/src/html/index.njk
@@ -704,49 +704,65 @@
         </div>
       </section>
 
-      <section class="mdc-layout-grid">
+      <section id="co-vse-cekat" class="mdc-layout-grid">
         <h2 id="toc-co-od-hacker-campu-cekat">Co od Hacker Campu čekat?</h2>
 
         <p>
           Děláme nekomerční a z&nbsp;principu neformální akci, kde nám má všem
-          být dobře. Tohle jsou základní geny Hacker campu. Jediná část, kde
-          nestrpíme kompromisy:
+          být dobře. Tohle jsou základní geny Hacker campu.
+          <strong>Jediná část, kde nestrpíme kompromisy</strong>:
         </p>
 
-        <ul>
-          <li>Akce je jen pro pozvané</li>
+        <div class="mdc-layout-grid__inner">
+          <div
+            class="hc-card hc-card--decorated hc-card--centered mdc-layout-grid__cell"
+          >
+            Akce je jen pro pozvané
+          </div>
 
-          <li>Tykáme si</li>
+          <div
+            class="hc-card hc-card--decorated hc-card--centered mdc-layout-grid__cell"
+          >
+            Tykáme si
+          </div>
 
-          <li>
+          <div class="hc-card hc-card--decorated mdc-layout-grid__cell">
             Vstupenku si kupuješ na celou akci a budeme rádi, když s&nbsp;námi
             zůstaneš všechny tři dny
-          </li>
+          </div>
 
-          <li>
+          <div class="hc-card hc-card--decorated mdc-layout-grid__cell">
             Chováme se k&nbsp;sobě slušně a ohleduplně&nbsp;&ndash; dodržujeme
             hygienická i&nbsp;etická pravidla (i&nbsp;pokud jde o&nbsp;focení
             se, noční klid a podobně)
-          </li>
+          </div>
 
-          <li>
+          <div class="hc-card hc-card--decorated mdc-layout-grid__cell">
             Jsme v&nbsp;přírodě a chováme se i&nbsp;k&nbsp;ní ohleduplně
             (třídíme odpad a ideálně odjíždíme beze&nbsp;stop)
-          </li>
+          </div>
 
-          <li>Nemáme žádné VIP zóny</li>
+          <div
+            class="hc-card hc-card--decorated hc-card--centered mdc-layout-grid__cell"
+          >
+            Nemáme žádné VIP zóny
+          </div>
 
-          <li>
+          <div class="hc-card hc-card--decorated mdc-layout-grid__cell">
             Přivést můžeš i&nbsp;jakýkoliv doprovodný program&nbsp;&ndash;
             uvítáme vše od pípy, baristy a přípravy kávy až po&nbsp;DJs.
-          </li>
+          </div>
 
-          <li>
+          <div class="hc-card hc-card--decorated mdc-layout-grid__cell">
+            Každý účastník je zároveň tvůrce akce.
+          </div>
+
+          <div class="hc-card hc-card--decorated mdc-layout-grid__cell">
             Hacker Camp je z&nbsp;principu nekomerční akce. Svoji vlastní službu
             nebo produkt můžeš propagovat a nabízet jen pokud to obohatí
             samotnou&nbsp;akci
-          </li>
-        </ul>
+          </div>
+        </div>
       </section>
     </div>
     <section id="o-nas" class="mdc-layout-grid">
