[www.hackercamp.cz] Polishing

--- a/www.hackercamp.cz/src/html/index.njk
+++ b/www.hackercamp.cz/src/html/index.njk
@@ -633,7 +633,7 @@
               <time property="endDate" datetime="2021-09-05">5.&nbsp;září</time>
               v&nbsp;poledne, hned jak se proberete po good-bye&nbsp;party.
             </p>
-            <p>
+            <p style="margin: 2em 0 0">
               <a
                 class="hc-icon-link"
                 href="http://www.google.com/calendar/event?action=TEMPLATE&amp;dates=20210902%2F20210906&amp;text=Hacker%20Camp&amp;location=Sobe%C5%88%C3%A1k%2C%20Star%C3%BD%20Ro%C5%BEmit%C3%A1l%20148%2C%20Ro%C5%BEmit%C3%A1l%20pod%20T%C5%99em%C5%A1%C3%ADnem&amp;details=Za%C5%BEijte%20nult%C3%BD%20ro%C4%8Dn%C3%ADk%20netradi%C4%8Dn%C3%ADho%20t%C5%99%C3%ADdenn%C3%ADho%20festivalu%20pro%20lidi%20z%20%C4%8Desk%C3%A9%20tech%20sc%C3%A9ny."
