[www.hackercamp.cz] Fixed header CTA in Safari

--- a/www.hackercamp.cz/src/html/index.njk
+++ b/www.hackercamp.cz/src/html/index.njk
@@ -269,8 +269,12 @@
       .hc-icon-link svg {
         padding-right: 1ex;
       }
-      .hc-icon-link--decorated {
-        padding: 0 16px;
+
+      .hc-link--decorated {
+        text-decoration: none;
+        font-weight: bold;
+        display: inline-block;
+        padding: 18px 16px;
         border: 2px solid;
         border-image-slice: 1;
         border-image-source: var(--hc-gradient);
@@ -408,7 +412,7 @@
         </div>
         <div class="hc-navbar__right mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <a
-            class="hc-icon-link hc-icon-link--decorated"
+            class="hc-link hc-link--decorated"
             href="https://docs.google.com/forms/d/e/1FAIpQLSeDdZ5ZLSxS6lVXM4jshT8fBFQkMVww3jT5etoAPf8aK0yK0A/viewform"
           >Chci se zapojit</a>
         </div>
