Hookamonk texts updated

--- a/www.hookamonk.com/src/html/catering/index.njk
+++ b/www.hookamonk.com/src/html/catering/index.njk
@@ -71,7 +71,7 @@
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <section class="hm-hero">
           <h1 class="hm-hero__header">Hi-tech
-            unique solution for demanding users</h1>
+            unique solution for your club.</h1>
           <h2 class="hm-hero__sub-header">
             If you want hookamonk for your lounge please contact us on email: <a href="mailto:sales@hookamonk.com">sales@hookamonk.com</a>
           </h2>
@@ -90,8 +90,8 @@
           </svg>
         </div>
         <div>
-          <h3 hm-section-features__feature>Heating only by electronics</h3>
-          <p>There are no charcoals in hookamonk. All heating is made by spiral heated from electronic devices in head. Tobacco is heated the same way as in classic hookah only charcoals are replaced by the spiral.
+          <h3 hm-section-features__feature>Say goodbye to charcoals</h3>
+          <p>Hookamonk is completely charcoal-less hookah. Tobacco is heated by spiral controlled by smart electronic device. No more dirty job and bed smell at your place.
         </p>
         </div>
       </div>
@@ -104,7 +104,7 @@
         </div>
         <div>
           <h3>Smart inhale detection</h3>
-          <p>Electronic head reacts to inhales. When you breathe in, it will warm the tobacco, when you don't smoke it maintains the temperature.</p>
+          <p>Electronic head reacts to inhales. The tobacco is warmed only when you breath in, the right temperature is intelligently kept otherwise. No more unpleasant sessions caused by bad charcoal management.</p>
         </div>
       </div>
       <div
@@ -115,8 +115,8 @@
           </svg>
         </div>
         <div>
-          <h3>No staff</h3>
-          <p>You need shishaman only to fill the bowl with tobacco. There is no need to take care about charcoals and change them during the session.
+          <h3>Less staff needed</h3>
+          <p>You need shishaman only to fill the bowl with tobacco. Hookamonk takes care of a pleasant smoking experience throughout the session without any external assistance needed.
           </p>
         </div>
       </div>
@@ -129,7 +129,7 @@
         </div>
         <div>
           <h3>No burnt furniture</h3>
-          <p>If there are charcoals, there are no cinders that could damage your couch, chairs or table.</p>
+          <p>Charcoals can easily burn your precious club furniture. No more burnt spots with Hookamonk.</p>
         </div>
       </div>
       <div
@@ -140,8 +140,8 @@
           </svg>
         </div>
         <div>
-          <h3>You pay as you smoke</h3>
-          <p>Hookamonk is not for sell. Lounges pay only for finished sessions.</p>
+          <h3>Pay per usage</h3>
+          <p>You will pay us at the end of the month based on number of shishas served, no initial downpayments. We earn when you earn. You earn, when your customers are returning. Win,win,win situation.</p>
         </div>
       </div>
       <div
@@ -153,7 +153,7 @@
         </div>
         <div>
           <h3>New features updated automatically</h3>
-          <p>Hookah is still connected to wifi. You will receive every update automatically.</p>
+          <p>Hookamonk is kept up to date thanks to connection to wifi. All of our devices are updated automatically on regular basis.</p>
         </div>
       </div>
       <div
@@ -188,8 +188,8 @@
           </svg>
         </div>
         <div>
-          <h3>Compatibility with other hookahs</h3>
-          <p>Electronic head is possible to place on most of the usual hookahs, heat managements and bowls.</p>
+          <h3>Complete set provided</h3>
+          <p>Hookamonk consists of shisha box, computer and the electronic head with our patented shisha funnel. No other stuff needed, you can smoke in 15 minutes after unpacking the device.</p>
         </div>
       </div>
       <div
@@ -201,7 +201,7 @@
         </div>
         <div>
           <h3>Consistent taste</h3>
-          <p>With hookamonk, the taste of tobacco remains still the same during the session.</p>
+          <p>With hookamonk, the taste of tobacco remains still the same during the session. No extra tweaking needed.</p>
         </div>
       </div>
       <div
@@ -213,7 +213,7 @@
         </div>
         <div>
           <h3>Lounge app</h3>
-          <p>The Lounge App helps lounge staff to manage Hookamonk devices. It features an overview of running table sessions, monitors session run time, maintenance status and allows to remotely control the hookahs.</p>
+          <p>The Lounge App helps the lounge staff to manage Hookamonk devices. It features an overview of running table sessions, monitors session run time, maintenance status and allows to remotely control the hookahs.</p>
         </div>
       </div>
       <div
