--- a/www.hookamonk.com/src/html/index.njk
+++ b/www.hookamonk.com/src/html/index.njk
@@ -73,8 +73,8 @@
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <section class="hm-hero">
-          <h1 class="hm-hero__header">Game changer in Hookah</h1>
-          <h2 class="hm-hero__sub-header">First fully electronic hookah for tobacco</h2>
+          <h1 class="hm-hero__header">Game changer in hookah world</h1>
+          <h2 class="hm-hero__sub-header">First fully electronic hookah set for tobacco</h2>
           <p>
             <a href="/catering" class="hm-button">I want it for my lounge</a>
           </p>
