Hookamonk small tweaks

--- a/www.hookamonk.com/src/html/catering/index.njk
+++ b/www.hookamonk.com/src/html/catering/index.njk
@@ -200,8 +200,8 @@
           </svg>
         </div>
         <div>
-          <h3>Consistent taste</h3>
-          <p>With hookamonk, the taste of tobacco remains still the same during the session. No extra tweaking needed.</p>
+          <h3>Consistent and full taste</h3>
+          <p>With hookamonk, the taste of tobacco remains full and constant during the session. No extra tweaking needed.</p>
         </div>
       </div>
       <div
