Hookamonk sales texts adjusted

--- a/www.hookamonk.com/src/html/catering/index.njk
+++ b/www.hookamonk.com/src/html/catering/index.njk
@@ -71,9 +71,9 @@
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <section class="hm-hero">
           <h1 class="hm-hero__header">Hi-tech
-            unique solution for your club.</h1>
+            unique solution for your place.</h1>
           <h2 class="hm-hero__sub-header">
-            If you want hookamonk for your lounge please contact us on email: <a href="mailto:sales@hookamonk.com">sales@hookamonk.com</a>
+            If you want hookamonk for your place please contact us on email: <a href="mailto:sales@hookamonk.com">sales@hookamonk.com</a>
           </h2>
         </section>
       </div>
@@ -99,12 +99,12 @@
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 hm-section-features__feature">
         <div class="material-icons">
           <svg viewBox="0 0 24 24">
-            <path fill="currentColor" d="M7.95,3L6.53,5.19L7.95,7.4H7.94L5.95,10.5L4.22,9.6L5.64,7.39L4.22,5.19L6.22,2.09L7.95,3M13.95,2.89L12.53,5.1L13.95,7.3L13.94,7.31L11.95,10.4L10.22,9.5L11.64,7.3L10.22,5.1L12.22,2L13.95,2.89M20,2.89L18.56,5.1L20,7.3V7.31L18,10.4L16.25,9.5L17.67,7.3L16.25,5.1L18.25,2L20,2.89M2,22V14A2,2 0 0,1 4,12H20A2,2 0 0,1 22,14V22H20V20H4V22H2M6,14A1,1 0 0,0 5,15V17A1,1 0 0,0 6,18A1,1 0 0,0 7,17V15A1,1 0 0,0 6,14M10,14A1,1 0 0,0 9,15V17A1,1 0 0,0 10,18A1,1 0 0,0 11,17V15A1,1 0 0,0 10,14M14,14A1,1 0 0,0 13,15V17A1,1 0 0,0 14,18A1,1 0 0,0 15,17V15A1,1 0 0,0 14,14M18,14A1,1 0 0,0 17,15V17A1,1 0 0,0 18,18A1,1 0 0,0 19,17V15A1,1 0 0,0 18,14Z" />
+            <path fill="currentColor" d="M20,10C22,13 17,22 15,22C13,22 13,21 12,21C11,21 11,22 9,22C7,22 2,13 4,10C6,7 9,7 11,8V5C5.38,8.07 4.11,3.78 4.11,3.78C4.11,3.78 6.77,0.19 11,5V3H13V8C15,7 18,7 20,10Z" />
           </svg>
         </div>
         <div>
-          <h3>Smart inhale detection</h3>
-          <p>Electronic head reacts to inhales. The tobacco is warmed only when you breath in, the right temperature is intelligently kept otherwise. No more unpleasant sessions caused by bad charcoal management.</p>
+          <h3>Consistent and full taste</h3>
+          <p>With hookamonk, the taste of tobacco remains full and constant during the session. No extra tweaking needed and even hookah beginner can shine with a delicious hookah.</p>
         </div>
       </div>
       <div
@@ -140,20 +140,20 @@
           </svg>
         </div>
         <div>
-          <h3>Pay per usage</h3>
-          <p>You will pay us at the end of the month based on number of shishas served, no initial downpayments. We earn when you earn. You earn, when your customers are returning. Win,win,win situation.</p>
+          <h3>Pay per use</h3>
+          <p>You will pay us at the end of each month based on number of shishas served, no initial downpayments. We earn when you earn. You earn, when your customers are returning. Truly a win-win-win situation. Individual plans available.</p>
         </div>
       </div>
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 hm-section-features__feature">
         <div class="material-icons">
           <svg viewBox="0 0 24 24">
-            <path fill="currentColor" d="M17,13L12,18L7,13H10V9H14V13M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z" />
+            <path fill="currentColor" d="M7.95,3L6.53,5.19L7.95,7.4H7.94L5.95,10.5L4.22,9.6L5.64,7.39L4.22,5.19L6.22,2.09L7.95,3M13.95,2.89L12.53,5.1L13.95,7.3L13.94,7.31L11.95,10.4L10.22,9.5L11.64,7.3L10.22,5.1L12.22,2L13.95,2.89M20,2.89L18.56,5.1L20,7.3V7.31L18,10.4L16.25,9.5L17.67,7.3L16.25,5.1L18.25,2L20,2.89M2,22V14A2,2 0 0,1 4,12H20A2,2 0 0,1 22,14V22H20V20H4V22H2M6,14A1,1 0 0,0 5,15V17A1,1 0 0,0 6,18A1,1 0 0,0 7,17V15A1,1 0 0,0 6,14M10,14A1,1 0 0,0 9,15V17A1,1 0 0,0 10,18A1,1 0 0,0 11,17V15A1,1 0 0,0 10,14M14,14A1,1 0 0,0 13,15V17A1,1 0 0,0 14,18A1,1 0 0,0 15,17V15A1,1 0 0,0 14,14M18,14A1,1 0 0,0 17,15V17A1,1 0 0,0 18,18A1,1 0 0,0 19,17V15A1,1 0 0,0 18,14Z" />
           </svg>
         </div>
         <div>
-          <h3>New features updated automatically</h3>
-          <p>Hookamonk is kept up to date thanks to connection to wifi. All of our devices are updated automatically on regular basis.</p>
+          <h3>Smart inhale detection</h3>
+          <p>Electronic head reacts to inhales. The tobacco is warmed only when you breath in, the right temperature is intelligently kept otherwise. No more unpleasant sessions caused by bad charcoal management.</p>
         </div>
       </div>
       <div
@@ -196,12 +196,12 @@
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 hm-section-features__feature">
         <div class="material-icons">
           <svg viewBox="0 0 24 24">
-            <path fill="currentColor" d="M20,10C22,13 17,22 15,22C13,22 13,21 12,21C11,21 11,22 9,22C7,22 2,13 4,10C6,7 9,7 11,8V5C5.38,8.07 4.11,3.78 4.11,3.78C4.11,3.78 6.77,0.19 11,5V3H13V8C15,7 18,7 20,10Z" />
+            <path fill="currentColor" d="M17,13L12,18L7,13H10V9H14V13M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z" />
           </svg>
         </div>
         <div>
-          <h3>Consistent and full taste</h3>
-          <p>With hookamonk, the taste of tobacco remains full and constant during the session. No extra tweaking needed.</p>
+          <h3>New features updated automatically</h3>
+          <p>Hookamonk is kept up to date thanks to connection to wifi. All of our devices are updated automatically on regular basis.</p>
         </div>
       </div>
       <div
@@ -239,7 +239,7 @@
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--align-middle hm-order-desktop--2">
         <h3 class="hm-h2">Mobile box</h3>
-        <p>Portable version of hookamonk. It's possible to use it with any table you have. All you need is source of electricity and wifi connection.</p>
+        <p>Portable version of hookamonk ready to be to used it anywhere. All you need is a source of electricity and a wifi connection.</p>
       </div>
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 hm-order-desktop--1">
@@ -256,7 +256,7 @@
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--align-middle">
         <h3 class="hm-h2">Table</h3>
-        <p>Specific table designed for hookamonk. Display is built in. All electronic is built in. You only add shisha with an electronic head.</p>
+        <p>Specific table meticulously designed for hookamonk. Display is built in. All electronic is built in. Plug in in our shisha with an electronic head and off you go.</p>
       </div>
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
