--- a/www.hookamonk.com/src/html/index.njk
+++ b/www.hookamonk.com/src/html/index.njk
@@ -76,7 +76,7 @@
           <h1 class="hm-hero__header">Game changer in hookah world</h1>
           <h2 class="hm-hero__sub-header">First fully electronic hookah set for tobacco</h2>
           <p>
-            <a href="/catering" class="hm-button">I want it for my lounge</a>
+            <a href="/catering" class="hm-button">I want it now!</a>
           </p>
         </section>
       </div>
