--- a/chytrybox.cz/src/stylesheets/typography.scss
+++ b/chytrybox.cz/src/stylesheets/typography.scss
@@ -1,3 +1,14 @@
+:root {
+  --postcube-black: #000;
+  --postcube-grey: #A5A5A5;
+  --postcube-white: #fff;
+
+  --postcube-primary: #1538E5;
+  --postcube-secondary: #00F483;
+  --postcube-secondary-light: #7FF9C1;
+}
+
+
 body {
   font-family: 'Nunito Sans', sans-serif;
   font-kerning: normal;
@@ -13,39 +24,42 @@ body {
 
 @media screen and (min-width: 840px) {
   h1 {
-    font-size: 40px;
+    font-size: 82px;
     font-weight: 800;
-    line-height: 48px;
-    color: #FFFFFF;
+    line-height: 84px;
+    margin-bottom: 0;
   }
 
   h2 {
     font-size: 40px;
     font-weight: 800;
-    color: #403068;
     line-height: 48px;
+    text-align: center;
+  }
+  h3 {
+    font-size: 30px;
+    font-weight: 800;
+    line-height: 32px;
     text-align: center;
   }
 
   p {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: normal;
     line-height: 32px;
-    color: #34374B;
   }
 }
+
 @media (max-width: 839px) {
   h1 {
     font-size: 36px;
     font-weight: 800;
     line-height: 42px;
-    color: #FFFFFF;
   }
 
   h2 {
     font-size: 32px;
     font-weight: 800;
-    color: #403068;
     line-height: 38px;
     text-align: center;
   }
@@ -54,21 +68,32 @@ body {
     font-size: 20px;
     font-weight: normal;
     line-height: 32px;
-    color: #34374B;
   }
 }
 
-.action-button {
-  font-size: 20px;
-  font-weight: 600;
-  color: #FFFFFF;
-  background-color: #403068;
-  border-radius: 8px;
-  padding: 10px 52px;
-  text-decoration: none;
-  text-transform: uppercase;
+.btn {
+  text-align: center;
+  background-color: var(--postcube-secondary);
+  padding: 20px 30px;
+
   &:hover {
     cursor: pointer;
-    background-color: #140a3d;
+    background-color: var(--postcube-secondary-light);
   }
+}
+
+.action-btn, .download-btn {
+  color: var(--postcube-black);
+  text-decoration: none;
+  text-align: center;
+}
+
+.action-btn {
+  font-size: 22px;
+  font-weight: 800;
+}
+
+.download-btn {
+  font-size: 18px;
+  font-weight: normal;
 }
