[www.hackercamp.cz] Updated pricing

--- a/www.hackercamp.cz/src/html/index.njk
+++ b/www.hackercamp.cz/src/html/index.njk
@@ -770,12 +770,11 @@
           <article
             class="hc-card hc-card--decorated mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop"
           >
-            <h3 class="hc-text--gay">5&nbsp;&ndash; 10&nbsp;tisíc Kč</h3>
+            <h3 class="hc-text--gay">5&nbsp;tisíc Kč</h3>
             <p>
-              Finální cenovka bude záležet na nákladech. Na akci neplánujeme
-              vydělávat, zároveň ji chceme tvořit bez velkých komerčních
-              sponzorů. Cena tedy půjde na pokrytí nákladů. Počítáme zhruba
-              s&nbsp;5&nbsp;&ndash; 10&nbsp;tisíci na každého z&nbsp;nás.
+              Na akci neplánujeme vydělávat, zároveň ji chceme tvořit bez velkých
+              komerčních sponzorů. Cena tedy půjde na pokrytí nákladů. Počítáme
+              s&nbsp;5&nbsp;tisíci na každého z&nbsp;nás.
             </p>
           </article>
 
