[www.hackercamp.cz] Added contact mail

--- a/www.hackercamp.cz/src/html/index.njk
+++ b/www.hackercamp.cz/src/html/index.njk
@@ -784,8 +784,8 @@
             <h3>Podpořte další</h3>
             <p>
               Jako firma můžete podpořit účast nějaké neziskovky, nebo studenta.
-              Dejte nám vědět, zda o&nbsp;něco takového máte zájem. Rádi vás
-              propojíme!
+              <a href="mailto:team&#64;hackercamp.cz">Dejte nám vědět</a>, zda o&nbsp;něco takového
+              máte zájem. Rádi vás propojíme!
             </p>
           </article>
         </div>
